[gd_scene load_steps=14 format=3 uid="uid://ox8diyn8d815"]

[ext_resource type="Shader" path="res://pause_menu/art/pause_menu.gdshader" id="1_7526o"]
[ext_resource type="Texture2D" uid="uid://clrxcigtoqi16" path="res://pause_menu/art/PAUSEMENU.png" id="1_v45gk"]
[ext_resource type="Script" path="res://pause_menu/scripts/pause_menu.gd" id="1_vc62u"]
[ext_resource type="Texture2D" uid="uid://8ukthm8yb27p" path="res://pause_menu/art/RESUMEBUTTON.png" id="2_i6f32"]
[ext_resource type="Texture2D" uid="uid://cxg3rwpvrg5j4" path="res://pause_menu/art/RESUMEDARK.png" id="3_ff3gp"]
[ext_resource type="Texture2D" uid="uid://dw0rbumwmx2n0" path="res://start_screen/art/buttons/guidebutton.png" id="4_rcsib"]
[ext_resource type="Texture2D" uid="uid://cgowyg547vd5p" path="res://start_screen/art/buttons/guidebutton_dark.png" id="5_y4chv"]
[ext_resource type="Texture2D" uid="uid://qtwk7y3yqgjt" path="res://start_screen/art/buttons/exitbutton.png" id="6_mn5pj"]
[ext_resource type="Texture2D" uid="uid://cm1lein25vpqy" path="res://start_screen/art/buttons/exitbutton_dark.png" id="7_rnlrw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vr88b"]
shader = ExtResource("1_7526o")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_gflbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lwfsh"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.846]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wydus"]
_data = {
"RESET": SubResource("Animation_gflbt"),
"blur": SubResource("Animation_lwfsh")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vc62u")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vr88b")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -281.5
offset_right = 281.5
offset_bottom = 281.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_v45gk")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="ResumeButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_i6f32")
texture_pressed = ExtResource("3_ff3gp")
texture_hover = ExtResource("3_ff3gp")

[node name="GuideButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_rcsib")
texture_pressed = ExtResource("5_y4chv")
texture_hover = ExtResource("5_y4chv")

[node name="ExitButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_mn5pj")
texture_pressed = ExtResource("7_rnlrw")
texture_hover = ExtResource("7_rnlrw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wydus")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GuideButton" to="." method="_on_guide_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
